Add and modify files

--- a/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev with vertex ai.ipynb
+++ b/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev with vertex ai.ipynb
@@ -292,16 +292,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a9585a48-7f0f-4154-806c-0ccbf3cd9f82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting env.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.27.0.180'\n",
+    "HOST='35.239.70.254'\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
@@ -415,10 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting Dockerfile\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -433,11 +449,10 @@
    "cell_type": "markdown",
    "id": "4bdff386-dcb9-414b-b406-685df67a0361",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Build the image"
+    "### Build a docker image"
    ]
   },
   {
@@ -467,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build an image"
+    "# Build a docker image"
    ]
   },
   {
