Add and modify files

--- a/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev with vertex ai.ipynb
+++ b/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev with vertex ai.ipynb
@@ -13,7 +13,7 @@
    "id": "c079758c-1724-441f-bbf7-d01c0522f246",
    "metadata": {},
    "source": [
-    "# Site App with Database v3 (with Agent)\n",
+    "# Site App with Database v4 (with Agent)\n",
     "\n",
     "* About Me Section\n",
     "* Notepad: Create, Read\n",
@@ -254,6 +254,7 @@
    "cell_type": "markdown",
    "id": "31d97a06-1967-4357-9f55-b5241fcb45ec",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
