--- a/15-App-site-blog-v4/site-v4/site dev v4.ipynb
+++ b/15-App-site-blog-v4/site-v4/site dev v4.ipynb
@@ -269,6 +269,7 @@
    "cell_type": "markdown",
    "id": "4b694f97-1535-44f6-bb64-7624697be0d9",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
