--- a/13-App-site-blog/site-/site dev.ipynb
+++ b/13-App-site-blog/site-/site dev.ipynb
@@ -277,7 +277,7 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.173.135.93'\n",
+    "HOST=''\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
