--- a/14-App-site-blog-v3/site-v3-with-vertex-ai/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-v3-with-vertex-ai/site dev v3.ipynb
@@ -33,7 +33,10 @@
   {
    "cell_type": "markdown",
    "id": "4d4bb2cb-bb1e-44d7-9cd3-723e5945ada4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Postgres Docker"
    ]
@@ -127,7 +130,10 @@
   {
    "cell_type": "markdown",
    "id": "9222c14c-f28e-4e18-b818-4d819eee652a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### pgAdmin"
    ]
@@ -158,7 +164,10 @@
   {
    "cell_type": "markdown",
    "id": "6ca6c7d0-96d9-42e6-9fef-ba1e37d7e514",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Create a firewall (GCP)"
    ]
@@ -177,7 +186,10 @@
   {
    "cell_type": "markdown",
    "id": "7af4f57e-88ce-40d6-8269-c1ad7fc2e491",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Open pgAdmin Browser"
    ]
@@ -281,7 +293,7 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.27.0.180'\n",
+    "HOST=''\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
