--- a/14-App-site-blog-v3/site-v3/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-v3/site dev v3.ipynb
@@ -272,7 +272,7 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.134.247.150'\n",
+    "HOST=''\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
