Add and modify files

--- a/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev v4 with vertex ai.ipynb
+++ b/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev v4 with vertex ai.ipynb
@@ -203,7 +203,9 @@
   {
    "cell_type": "markdown",
    "id": "935ec396-34b3-4980-b90d-c276ee09a9f2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Application"
    ]
@@ -302,7 +304,7 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='35.239.70.254'\n",
+    "HOST=''\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
