Add and modify files

--- a/16-App-site-blog-v5/site-v5-with-vertex-ai/site-v5-multi/app/Untitled.ipynb
+++ b/16-App-site-blog-v5/site-v5-with-vertex-ai/site-v5-multi/app/Untitled.ipynb
@@ -1,17 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "77b5785b-2ea6-4a7d-8657-3b8dfdc799bb",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3bfbdac2-fc6b-4410-8796-7360d1281750",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Site v4 Multi"
+    "import streamlit as st"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4bf4bf3-e770-4342-b451-9fd69e2a7f81",
+   "id": "99872f6e-f65b-4139-9ebe-eb4bc88abd3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ec46845-7834-477d-8213-0228345b8043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(st.chat_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5abdf2ae-e703-4c39-9c04-3ce65141c5ea",
    "metadata": {},
    "outputs": [],
    "source": []
