--- a/10-Database/site dev v4 with deployment.ipynb
+++ b/10-Database/site dev v4 with deployment.ipynb
@@ -217,6 +217,7 @@
    "cell_type": "markdown",
    "id": "a1f4c638-8072-43d1-89a9-1617ef15ff4b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -258,6 +259,7 @@
    "cell_type": "markdown",
    "id": "4b694f97-1535-44f6-bb64-7624697be0d9",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1396,6 +1398,16 @@
     "!gcloud builds submit \\\n",
     "    --region=us-west2 \\\n",
     "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v4/app-v4:tag1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf14b973-d6cd-4b0e-bdc0-c084892af872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -_-"
    ]
   },
   {
