Add and modify files

--- a/10-Database/Cloud Run Test v2.ipynb
+++ b/10-Database/Cloud Run Test v2.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "294dbaee-f847-41f4-90a7-b8f2dced1e53",
+   "id": "7ea0628a-5d2e-41c6-ae3f-43f7abaca641",
+   "metadata": {},
+   "source": [
+    "# Cloud Run Test v2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1fccfdc-a9fa-42e4-b5f1-186a055bfdea",
    "metadata": {},
    "source": [
     "# Cloud Run Test"
@@ -11,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d48ff7db-3933-4aee-81c0-611bb0e7a4c1",
+   "id": "d498352a-38d3-4f6a-a1bf-037cf82a076d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,47 +29,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b37c09de-64a5-475e-a27b-1964222c0157",
+   "id": "3c7c7607-550e-4479-8d56-6d30e96b8a7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir cloud-run-test"
+    "!mkdir cloud-run-test-v2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ce43e5-67ce-4b4d-858c-70106acc3cd8",
+   "id": "e9e46fa2-1c37-4c2c-9feb-7e088adcb880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd cloud-run-test"
+    "cd cloud-run-test-v2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba62d9be-b46b-4498-9076-1e5001efe00d",
+   "id": "60ad0cae-456a-49df-86bf-d2bf4703e7c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "import streamlit as st\n",
     "\n",
-    "st.write(\"It's working. v2\")"
+    "st.write(\"It's working.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c17ac6f-3e21-4dcc-a266-391c3455dc4c",
+   "id": "f409c561-8fc6-4213-bc10-d0c569baa4fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
     "WORKDIR /app\n",
-    "RUN pip install streamlit -q\n",
+    "RUN pip install streamlit psycopg2-binary google-cloud-aiplatform -q\n",
     "COPY . /app\n",
     "EXPOSE 9000\n",
     "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\", \"--server.port\", \"9000\"]"
@@ -70,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232e9f46-e2fa-45af-8e68-e3f7146c17d5",
+   "id": "bfb91094-1a72-46e1-b587-4abc6beeee06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c01d279-13af-47bb-abfd-dedecd3a6474",
+   "id": "fb7d623b-7e79-4fd0-8a37-968a33e0b03a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770b8eb8-f6c6-4dc1-96d1-79fb56c4bc50",
+   "id": "321a9fb4-8a18-459e-9967-0e1cc27d8d0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22afef7d-f4f4-4103-ad5e-d857f7de21fd",
+   "id": "5d8d1e9c-3d2f-4185-b414-65729f5722b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e1d8c75-8480-4881-abfc-b6333d005e9e",
+   "id": "d50cab30-4acd-4f85-a850-95fa3899af3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4290ef0-8286-4018-a119-4c0af7c9256b",
+   "id": "8834d3fb-38d4-49c6-853d-c20a25695b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107237d3-96a7-4879-b781-25261b403745",
+   "id": "3418f48a-1b7f-46f5-9a9c-59bb1866248d",
    "metadata": {},
    "source": [
     "### Deployment"
@@ -140,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecdb46d-2815-465d-be6f-bbab0e070ee7",
+   "id": "a3977d6d-c13f-4c50-959e-7b2b416edd7d",
    "metadata": {
     "tags": []
    },
@@ -151,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35cd4570-26fe-4395-95df-dd1b0937fc2c",
+   "id": "6aaf55d2-ba04-42ff-ae94-50bfd490b26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db5d4013-5330-449a-9953-f7a30c5f8c4d",
+   "id": "ac8d47c1-25b8-459d-a2b8-c49ab5bc9e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b3e143-9908-4237-ab07-0988973f6373",
+   "id": "61af5c69-52aa-4726-b617-2f442f0479f3",
    "metadata": {},
    "source": [
     "#### Build an image using Dockerfile"
@@ -186,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d64fac1-49b1-4ac5-9731-55eeef795a3a",
+   "id": "5a98292a-a180-4282-b544-e9e9d1f1fc22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,29 +205,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "318ea170-25b4-45e9-b0ad-f56626f18291",
+   "id": "d5f842ad-6de9-4c96-ab6d-ae9b5d629215",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd cloud-run-test"
+    "cd cloud-run-test-v2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007939f8-986d-491f-b7ea-44d2fd625eba",
+   "id": "bf4139f5-6409-441c-bdff-097d1f469a27",
    "metadata": {},
    "outputs": [],
    "source": [
     "!gcloud builds submit \\\n",
     "    --region=us-west2 \\\n",
-    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag1"
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec36522-8d39-47bd-8072-70409cfa45a9",
+   "id": "7a9a42cc-9513-4aed-992c-4273717979d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,77 +235,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8510c69a-96cb-476f-9e3b-99034b13a7e6",
-   "metadata": {},
-   "source": [
-    "#### Pull the image from Artifact Registry"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0caa98be-8796-48c7-aabd-b4af32a6a00c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !gcloud auth configure-docker us-west2-docker.pkg.dev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "583042c2-fdd7-4543-a484-1b2bad14b298",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker pull us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5d5c1e2-c717-41a1-8b2f-5ee33f82b3dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fc366c0-2e35-4148-bf3c-4c48e62fb176",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker run -d -p 8501:8501 -v $(pwd):/app us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb2d55dc-01d7-44a7-8ef4-f19115f5547b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker ps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31b705b4-3f19-410d-a160-9083d720b0b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !docker rm -f <...>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bc54de7-b600-40fb-aaa3-2e737e434971",
+   "id": "1b26962c-9d0b-4d23-a4e4-af341d81e8c7",
    "metadata": {},
    "outputs": [],
    "source": []
