--- a/10-Database/site dev v4 with deployment.ipynb
+++ b/10-Database/site dev v4 with deployment.ipynb
@@ -307,7 +307,7 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='35.239.70.254'\n",
+    "HOST= ''\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
@@ -1235,6 +1235,7 @@
    "cell_type": "markdown",
    "id": "fbcae193-2958-436f-8ee0-1b1c625e57be",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
