Add and modify files

--- a/10-Database/Cloud Run Test v2.ipynb
+++ b/10-Database/Cloud Run Test v2.ipynb
@@ -49,14 +49,133 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0e8162b1-38c9-4796-a2ef-9b51b5f66f46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile env.py\n",
+    "# DB Credentials\n",
+    "DBNAME=\"matt\"\n",
+    "USER='matt'\n",
+    "HOST= ''\n",
+    "PORT='5000'\n",
+    "PASSWORD='password'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "60ad0cae-456a-49df-86bf-d2bf4703e7c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%writefile app.py\n",
+    "# Import libraries\n",
     "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "import vertexai\n",
+    "from vertexai.language_models import TextGenerationModel\n",
+    "from env import *\n",
     "\n",
-    "st.write(\"It's working.\")"
+    "#----------Page Configuration----------# \n",
+    "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
+    "                   page_icon=\":cloud:\",\n",
+    "                   menu_items={\n",
+    "                       'About':\"# Matt Cloud Tech Version 4\"})\n",
+    "\n",
+    "#----------About Me Section----------#\n",
+    "st.title(\":cloud: Matt Cloud Tech v4\")\n",
+    "st.header(\"\", divider=\"rainbow\")\n",
+    "\n",
+    "st.write(\"\"\"\n",
+    "        ### Good day :wave:.\n",
+    "        ### My name is :blue[Matt]. I am a Cloud Technology Enthusiast.\n",
+    "        ### Currently, I am learning and building Cloud Infrastructure, Data and CI/CD Pipelines, and Intelligent Systems. \n",
+    "        \"\"\") \n",
+    "st.divider()\n",
+    "st.write(\":link: :computer: [Personal Website](https://)\")\n",
+    "st.write(\":link: :book: [Project Repository](https://)\")\n",
+    "st.write(\":link: :notebook: [Blog](https://)\")\n",
+    "st.write(\":link: :hand: [Connect with me](https://)\")\n",
+    "#----------End of About Me Section----------#\n",
+    "\n",
+    "#----------Portfolio Section----------#\n",
+    "st.header(\"Project Collections\",divider=\"rainbow\")\n",
+    "\n",
+    "st.write(\"#### :link: [PROJECT TITLE #1](https://)\")\n",
+    "st.caption(\"Caption\")\n",
+    "# with st.expander(f\"Learn more\"):\n",
+    "#    st.write(\"Description\")\n",
+    "    \n",
+    "st.divider()\n",
+    "\n",
+    "st.write(\"#### :link: [PROJECT TITLE #2](https://)\")\n",
+    "st.caption(\"Caption\")\n",
+    "# with st.expander(f\"Learn more\"):\n",
+    "#    st.write(\"Description\")\n",
+    "st.divider()\n",
+    "\n",
+    "#----------End of Portfolio Section----------#\n",
+    "\n",
+    "#----------Counter----------#\n",
+    "st.header(\"Counter\")\n",
+    "st.caption(\"\"\"\n",
+    "            Count every request in this app.\n",
+    "            \"\"\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS counter(id serial PRIMARY KEY, view int, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Counter\n",
+    "import time\n",
+    "time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "view = 1\n",
+    "### Insert into a database\n",
+    "SQL = \"INSERT INTO counter (view, time) VALUES(%s, %s);\"\n",
+    "data = (view, time)\n",
+    "cur.execute(SQL, data)\n",
+    "con.commit()\n",
+    "\n",
+    "# Total views\n",
+    "cur.execute(\"\"\"\n",
+    "            SELECT SUM(view) \n",
+    "            FROM counter\n",
+    "            \"\"\")\n",
+    "st.write(f\"### Total views: **{cur.fetchone()[0]}**\")\n",
+    "\n",
+    "# Current view\n",
+    "st.write(f\"Current: {time}\")\n",
+    "# Previous views\n",
+    "st.divider()\n",
+    "with st.expander(\"See Previous Views\"):\n",
+    "    st.write(\"**Previous Views**\")\n",
+    "    cur.execute(\"\"\"\n",
+    "                SELECT * \n",
+    "                FROM counter\n",
+    "                ORDER BY time DESC\n",
+    "                \"\"\")\n",
+    "    for _, _, time in cur.fetchall():\n",
+    "        st.text(f\"{time}\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Counter----------#\n",
+    "\n",
+    "st.write(\"It's working. tag4\")\n",
+    "st.write(USER)"
    ]
   },
   {
@@ -73,6 +192,16 @@
     "COPY . /app\n",
     "EXPOSE 9000\n",
     "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\", \"--server.port\", \"9000\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8398a30a-5b73-40a8-b19e-6bfb342b2edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pwd"
    ]
   },
   {
@@ -221,7 +350,7 @@
    "source": [
     "!gcloud builds submit \\\n",
     "    --region=us-west2 \\\n",
-    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag2"
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag4"
    ]
   },
   {
