--- a/10-Database/site dev v4 with deployment.ipynb
+++ b/10-Database/site dev v4 with deployment.ipynb
@@ -259,7 +259,6 @@
    "cell_type": "markdown",
    "id": "4b694f97-1535-44f6-bb64-7624697be0d9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1125,6 +1124,7 @@
     "# Close Connection\n",
     "cur.close()\n",
     "con.close()\n",
+    "#----------End of Counter----------#\n",
     "\n",
     "#----------Agent Section----------#\n",
     "#----------Vertex AI----------#\n",
