Add and modify files

--- a/10-Database/Cloud Run Test v2.ipynb
+++ b/10-Database/Cloud Run Test v2.ipynb
@@ -5,7 +5,7 @@
    "id": "7ea0628a-5d2e-41c6-ae3f-43f7abaca641",
    "metadata": {},
    "source": [
-    "# Cloud Run Test v2"
+    "# Cloud Run Test v2 (It's working.)"
    ]
   },
   {
@@ -119,6 +119,82 @@
     "\n",
     "#----------End of Portfolio Section----------#\n",
     "\n",
+    "#----------Notepad Section----------#\n",
+    "st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
+    "st.caption(\"\"\"\n",
+    "            Add your thoughts here! It will be stored in a database! \\n\n",
+    "            :warning: :red[Do not add sensitive data.]\n",
+    "            \"\"\")\n",
+    "# Connect to a database\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS notes(id serial PRIMARY KEY, name varchar, header varchar, note varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Inputs\n",
+    "name = st.text_input(\"Your Name\")\n",
+    "header = st.text_input(\"Header\")\n",
+    "note = st.text_area(\"Note\")\n",
+    "if st.button(\"Add a note\"):\n",
+    "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ##### :pencil: {header} \\n\n",
+    "            #### {note} \\n\n",
+    "            :man: {name} \\n\"\"\")\n",
+    "    st.caption(f\":watch: {time}\")\n",
+    "    st.success(\"Successfully Added.\")\n",
+    "    # st.balloons()\n",
+    "    ### Insert into adatabase\n",
+    "    SQL = \"INSERT INTO notes (name, header, note, time) VALUES(%s, %s, %s, %s);\"\n",
+    "    data = (name, header, note, time)\n",
+    "    cur.execute(SQL, data)\n",
+    "    con.commit()\n",
+    "    \n",
+    "# Previous Notes \n",
+    "st.divider()\n",
+    "st.write(\"### *Previous Notes*\")\n",
+    "# Write the data\n",
+    "cur.execute(\"\"\"\n",
+    "            SELECT * \n",
+    "            FROM notes\n",
+    "            ORDER BY time DESC\n",
+    "            \"\"\")\n",
+    "for id, name, header, note, time in cur.fetchall():\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ##### :pencil: {header} \\n\n",
+    "            #### {note} \\n\n",
+    "            :man: {name} \\n\"\"\")\n",
+    "    st.caption(f\":watch: {time}\")\n",
+    "\n",
+    "    with st.expander(f\"Edit or Delete (ID #: {id})\"):\n",
+    "        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
+    "        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
+    "        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
+    "        if st.button(f\"UPDATE ID #: {id}\"):\n",
+    "            SQL = \" UPDATE notes SET id=%s, name=%s, header=%s, note=%s WHERE id = %s\"\n",
+    "            data = (id, name, header, note, id)\n",
+    "            cur.execute(SQL, data)\n",
+    "            con.commit()\n",
+    "            st.success(\"Successfully Edited.\")\n",
+    "        if st.button(f\"DELETE ID #: {id}\"):\n",
+    "            cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
+    "            con.commit()\n",
+    "            st.success(\"Successfully Deleted.\")\n",
+    "    st.subheader(\"\",divider=\"gray\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Notepad Section----------#\n",
+    "\n",
     "#----------Counter----------#\n",
     "st.header(\"Counter\")\n",
     "st.caption(\"\"\"\n",
@@ -174,7 +250,95 @@
     "con.close()\n",
     "#----------End of Counter----------#\n",
     "\n",
-    "st.write(\"It's working. tag4\")\n",
+    "#----------Agent Section----------#\n",
+    "#----------Vertex AI----------#\n",
+    "vertexai.init(project=\"matt-project-training\", location=\"us-central1\")\n",
+    "parameters = {\n",
+    "    \"candidate_count\": 1,\n",
+    "    \"max_output_tokens\": 1024,\n",
+    "    \"temperature\": 0.2,\n",
+    "    \"top_p\": 0.8,\n",
+    "    \"top_k\": 40\n",
+    "}\n",
+    "model = TextGenerationModel.from_pretrained(\"text-bison\")\n",
+    "\n",
+    "# response = model.predict(\n",
+    "#    \"\"\"Hi\"\"\",\n",
+    "#    **parameters\n",
+    "# )\n",
+    "# st.write(f\"Response from Model: {response.text}\")\n",
+    "\n",
+    "#----------End of Vertex AI----------#\n",
+    "import time\n",
+    "st.header(\":computer: Agent :construction:\",divider=\"rainbow\")\n",
+    "st.caption(\"### Chat with my agent (still under construction)\")\n",
+    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
+    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
+    "\n",
+    "\n",
+    "               \n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "# Connect to a database\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Prompt\n",
+    "input_name = st.text_input(\"Your Name:\")\n",
+    "agent = st.toggle(\"**Let's go**\")\n",
+    "if agent:\n",
+    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
+    "    prompt = st.chat_input(\"Talk to my agent\")\n",
+    "    if prompt:\n",
+    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "        message = st.chat_message(\"user\")\n",
+    "        message.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "        message.caption(f\"{time}\")\n",
+    "        message = st.chat_message(\"assistant\")\n",
+    "        response = model.predict(prompt,\n",
+    "            **parameters\n",
+    "        )\n",
+    "        output = response.text\n",
+    "        message.write(output)\n",
+    "        message.caption(f\"{time}\")\n",
+    "        st.divider()\n",
+    "\n",
+    "        ### Insert into a database\n",
+    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
+    "        data = (input_name, prompt, output, time)\n",
+    "        cur.execute(SQL, data)\n",
+    "        con.commit()\n",
+    "\n",
+    "\n",
+    "    with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
+    "        cur.execute(f\"\"\"\n",
+    "                    SELECT * \n",
+    "                    FROM chats\n",
+    "                    WHERE name='{input_name}'\n",
+    "                    ORDER BY time ASC\n",
+    "                    \"\"\")\n",
+    "        for id, name, prompt, output, time in cur.fetchall():\n",
+    "            message = st.chat_message(\"user\")\n",
+    "            message.write(f\":blue[{name}]: {prompt}\")\n",
+    "            message.caption(f\"{time}\")\n",
+    "            message = st.chat_message(\"assistant\")\n",
+    "            message.write(output)\n",
+    "            message.caption(f\"{time}\")\n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Agent Section----------#\n",
+    "\n",
+    "st.write(\"It's working. tag6\")\n",
     "st.write(USER)"
    ]
   },
@@ -350,7 +514,7 @@
    "source": [
     "!gcloud builds submit \\\n",
     "    --region=us-west2 \\\n",
-    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag4"
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag6"
    ]
   },
   {
@@ -360,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# It's working."
+    "# It's really working. ^_^"
    ]
   },
   {
